Fix date text align
A small thing, but it happened when there were too many dev icons.

--- a/folio-app/src/components/Project.module.css
+++ b/folio-app/src/components/Project.module.css
@@ -32,6 +32,7 @@
   display: flex;
   flex-direction: column;
   align-items: right;
+  text-align: right;
   margin-left: auto;
 }
 
